--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <body class="min-h-screen bg-white text-neutral-900 font-sans antialiased">
     <header class="sticky top-0 bg-white/80 backdrop-blur border-b border-neutral-200">
         <div class="mx-auto max-w-5xl px-4 py-4 flex items-center justify-between">
-            <a href="#home" class="font-medium">Abka TacimbiDoombi</a>
+            <a href="#home" class="font-medium inline-flex items-center gap-2">
+                <img src="./logo.png" alt="Abka TacimbiDoombi logo" class="h-8 w-8 rounded-md" />
+                <span>Abka TacimbiDoombi</span>
+            </a>
             <nav class="hidden sm:flex gap-6 text-sm text-neutral-600">
                 <a href="#about" class="hover:text-neutral-900">About</a>
                 <a href="#skills" class="hover:text-neutral-900">Skills</a>
