--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                         class="inline-flex items-center rounded-lg border border-neutral-300 px-4 py-2 text-sm font-medium hover:bg-neutral-50">Email</a>
                     <a href="https://github.com/TacimbiDoombi" target="_blank" rel="noopener"
                         class="inline-flex items-center rounded-lg px-4 py-2 text-sm font-medium text-neutral-700 hover:text-neutral-900">GitHub</a>
+                    <a href="https://huggingface.co/TacimbiDoombi" target="_blank" rel="noopener"
+                        class="inline-flex items-center rounded-lg px-4 py-2 text-sm font-medium text-neutral-700 hover:text-neutral-900">Hugging Face</a>
                 </div>
             </div>
         </section>
@@ -73,6 +75,13 @@
                 <p class="mt-3 text-neutral-700">Email:
                     <a class="text-neutral-900 underline underline-offset-4 hover:no-underline"
                         href="mailto:TacimbiDoombi@outlook.com">TacimbiDoombi@outlook.com</a>
+                </p>
+                <p class="mt-2 text-neutral-700">Profiles:
+                    <a class="text-neutral-900 underline underline-offset-4 hover:no-underline"
+                        href="https://github.com/TacimbiDoombi" target="_blank" rel="noopener">GitHub</a>
+                    ·
+                    <a class="text-neutral-900 underline underline-offset-4 hover:no-underline"
+                        href="https://huggingface.co/TacimbiDoombi" target="_blank" rel="noopener">Hugging Face</a>
                 </p>
             </div>
         </section>
