--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <span>Abka TacimbiDoombi</span>
             </a>
             <nav class="hidden sm:flex gap-6 text-sm text-neutral-600">
+                <a href="#bookmarks" class="hover:text-neutral-900">Bookmarks</a>
                 <a href="#about" class="hover:text-neutral-900">About</a>
                 <a href="#skills" class="hover:text-neutral-900">Skills</a>
                 <a href="#contact" class="hover:text-neutral-900">Contact</a>
