--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="Life is short, you need Python!" />
     <meta property="og:type" content="website" />
     <link href="./output.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <body class="min-h-screen bg-white text-neutral-900 font-sans antialiased">
