--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="min-h-screen bg-white text-neutral-900 font-sans antialiased">
     <header class="sticky top-0 bg-white/80 backdrop-blur border-b border-neutral-200">
         <div class="mx-auto max-w-5xl px-4 py-4 flex items-center justify-between">
-            <a href="#home" class="font-medium inline-flex items-center gap-2">
+            <a href="https://tacimbidoombi.com" class="font-medium inline-flex items-center gap-2">
                 <span>Abka TacimbiDoombi</span>
             </a>
             <nav class="hidden sm:flex gap-6 text-sm text-neutral-600">
