--- a/index.html
+++ b/index.html
@@ -1,99 +1,16 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Abka TacimbiDoombi · ᠠᠪᡴᠠ ᡨᠠᠴᡳᠮᠪᡳ ᡩᠣᠣᠮᠪᡳ</title>
-    <meta name="description" content="Abka TacimbiDoombi personal site. Life is short, you need Python!" />
-    <meta property="og:title" content="Abka TacimbiDoombi · Personal Site" />
-    <meta property="og:description" content="Life is short, you need Python!" />
-    <meta property="og:type" content="website" />
-    <link href="./output.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Abka TacimbiDoombi · ᠠᠪᡴᠠ ᡨᠠᠴᡳᠮᠪᡳ ᡩᠣᠣᠮᠪᡳ</title>
 </head>
 
-<body class="min-h-screen bg-white text-neutral-900 font-sans antialiased">
-    <header class="sticky top-0 bg-white/80 backdrop-blur border-b border-neutral-200">
-        <div class="mx-auto max-w-5xl px-4 py-4 flex items-center justify-between">
-            <a href="https://tacimbidoombi.com" class="font-medium inline-flex items-center gap-2">
-                <span>Abka TacimbiDoombi</span>
-            </a>
-            <nav class="hidden sm:flex gap-6 text-sm text-neutral-600">
-                <a href="#bookmarks" class="hover:text-neutral-900">Bookmarks</a>
-                <a href="#about" class="hover:text-neutral-900">About</a>
-                <a href="#skills" class="hover:text-neutral-900">Skills</a>
-                <a href="#contact" class="hover:text-neutral-900">Contact</a>
-            </nav>
-        </div>
-    </header>
-
-    <main id="home" class="mx-auto max-w-5xl px-4">
-        <!-- Hero -->
-        <section class="py-16 sm:py-24">
-            <div class="space-y-4">
-                <p class="text-base text-neutral-600">ᠠᠪᡴᠠ ᡨᠠᠴᡳᠮᠪᡳ ᡩᠣᠣᠮᠪᡳ</p>
-                <h1 class="text-4xl sm:text-5xl font-semibold tracking-tight">Abka TacimbiDoombi</h1>
-                <p class="text-xl text-neutral-700">Life is short, you need Python!</p>
-                <div class="pt-2 flex flex-wrap gap-3">
-                    <a href="mailto:TacimbiDoombi@outlook.com"
-                        class="inline-flex items-center rounded-lg border border-neutral-300 px-4 py-2 text-sm font-medium hover:bg-neutral-50">Email</a>
-                    <a href="https://github.com/TacimbiDoombi" target="_blank" rel="noopener"
-                        class="inline-flex items-center rounded-lg px-4 py-2 text-sm font-medium text-neutral-700 hover:text-neutral-900">GitHub</a>
-                    <a href="https://huggingface.co/TacimbiDoombi" target="_blank" rel="noopener"
-                        class="inline-flex items-center rounded-lg px-4 py-2 text-sm font-medium text-neutral-700 hover:text-neutral-900">Hugging Face</a>
-                </div>
-            </div>
-        </section>
-
-        <!-- About -->
-        <section id="about" class="py-10">
-            <div class="rounded-xl border border-neutral-200 bg-white p-6">
-                <h2 class="text-xl font-medium">About Me</h2>
-                <p class="mt-3 text-neutral-700">I love Python and open source, aiming for simplicity and reliability. I
-                    focus on building clean, maintainable frontends with Tailwind CSS.</p>
-            </div>
-        </section>
-
-        <!-- Skills -->
-        <section id="skills" class="py-10">
-            <h2 class="text-xl font-medium">Skills</h2>
-            <div class="mt-4 flex flex-wrap gap-3">
-                <span
-                    class="inline-flex items-center rounded-full bg-neutral-100 px-3 py-1 text-sm text-neutral-700">Python</span>
-                <span
-                    class="inline-flex items-center rounded-full bg-neutral-100 px-3 py-1 text-sm text-neutral-700">Tailwind
-                    CSS</span>
-                <span
-                    class="inline-flex items-center rounded-full bg-neutral-100 px-3 py-1 text-sm text-neutral-700">GitHub
-                    Pages</span>
-            </div>
-        </section>
-
-        <!-- Contact -->
-        <section id="contact" class="py-10">
-            <div class="rounded-xl border border-neutral-200 bg-white p-6">
-                <h2 class="text-xl font-medium">Contact</h2>
-                <p class="mt-3 text-neutral-700">Email:
-                    <a class="text-neutral-900 underline underline-offset-4 hover:no-underline"
-                        href="mailto:TacimbiDoombi@outlook.com">TacimbiDoombi@outlook.com</a>
-                </p>
-                <p class="mt-2 text-neutral-700">Profiles:
-                    <a class="text-neutral-900 underline underline-offset-4 hover:no-underline"
-                        href="https://github.com/TacimbiDoombi" target="_blank" rel="noopener">GitHub</a>
-                    ·
-                    <a class="text-neutral-900 underline underline-offset-4 hover:no-underline"
-                        href="https://huggingface.co/TacimbiDoombi" target="_blank" rel="noopener">Hugging Face</a>
-                </p>
-            </div>
-        </section>
-    </main>
-
-    <footer class="mt-12 border-t border-neutral-200">
-        <div class="mx-auto max-w-5xl px-4 py-8 text-sm text-neutral-600">
-            <p>© 2025 Abka TacimbiDoombi · GitHub Pages</p>
-        </div>
-    </footer>
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
